# contexta

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: dependabot.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: agent_prompt.py  chat.py  conversation.py  document.py  note.py  notebook.py
backend/app/routes/: agent_prompts.py  chat.py  conversations.py  documents.py  notebooks.py  notes.py
backend/app/services/: agent_executor.py  agent_prompts_db.py  bm25_search.py  chat.py  chat_streaming.py  chat_utils.py  context_compressor.py  conversation_db.py  custom_prompts_db.py  document_parser.py  embedding_cache.py  embeddings.py  note_db.py  notebook_db.py  parent_chunk_store.py  query_router.py  reranker.py  title_generator.py  vector_store.py
backend/tests/: conftest.py  test_api_chat.py  test_chat_utils.py  test_query_router.py
backend/tests/routes/: test_agent_prompts.py  test_chat.py  test_conversations.py  test_documents.py  test_notebooks.py  test_notes.py
backend/tests/services/: test_agent_executor.py  test_agent_prompts_db.py  test_bm25_search.py  test_chat.py  test_chat_streaming.py  test_chat_utils.py  test_context_compressor.py  test_conversation_db.py  test_custom_prompts_db.py  test_document_parser.py  test_embedding_cache.py  test_embeddings.py  test_note_db.py  test_notebook_db.py  test_parent_chunk_store.py  test_query_router.py  test_reranker.py  test_title_generator.py  test_vector_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+17 files in other folders)
