[project]
name = "contexta"
version = "1.0.0"
description = "RAG-based document Q&A system with citations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.44.0",
    "python-multipart==0.0.22",
    "openai>=1.30.0",
    "chromadb==1.5.5",
    "pymupdf==1.27.2.2",
    "python-docx==1.2.0",
    "pywin32>=306 ; sys_platform == 'win32'",
    "Pillow==12.1.1",
    "python-dotenv==1.2.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "openpyxl==3.1.5",
    "tiktoken>=0.5.0",
    "numpy<3.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.27.0,<0.29",
    "PyJWT>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "nltk==3.9.3",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:httpx._client",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
